--- a/templates/test.html
+++ b/templates/test.html
@@ -65,6 +65,7 @@
         function resetSvgStuff() {
             document.getElementById('svg_container').innerHTML = svg_data;
             foo();
+            downloadable();
         }
 
         function add_courses_terms_to_dropdown() {
